--- a/01-git-github-cornucopia/git-github-cornucopia.Rmd
+++ b/01-git-github-cornucopia/git-github-cornucopia.Rmd
@@ -76,7 +76,7 @@ A high-level overview (I'll get more specific in a minute)
 
 ## Making sure everything is set up
 
-In your RStudio, you should have a pane that has at least two tabs, one labeled Console and the other Terminal. The Console is just for `R` code, and the `Terminal` is more general, for commandline tools. 
+In your RStudio, you should have a pane that has at least two tabs, one labeled Console and the other Terminal. The Console is just for `R` code, and the Terminal is more general, for commandline tools. We'll be trying to do everything in the Console, but the Terminal is our fallback for git code. 
 
 Let's first make sure you have the `usethis` package. In your Console, type 
 
@@ -90,19 +90,13 @@ If you get an error, install the `usethis` package,
 install.packages("usethis")
 ```
 
-Then, let's check you have git. Open the Terminal tab and type 
+Then, let's check the situation report on your current git/Github status. 
 
-```
-git --version
-```
-
-If nothing comes up, talk to one of us about getting up to speed! Assuming you get something back, then try 
-
-```
-git config --global --list
+```{}
+git_siterep()
 ```
 
-and ensure it at least knows your `user.name` and `user.email`. If one or both of those things are missing, flag one of us, and/or follow the [Happy git with R advice](https://happygitwithr.com/hello-git.html). 
+Make sure that the User section at least knows your `Name` and `Email`. If one or both of those things are missing, flag one of us, and/or follow [Ian's day zero prep instructions](https://uncoast-unconf.github.io/uu-2019-day-zero/00-preparation/03-usethis/). 
 
 ---
 
@@ -155,4 +149,63 @@ You should now have a new RStudio project open, containing the code from the `bi
 
 ## The bingo package
 
-You can also go on GitHub to view Jenny Bryan's version of the code, at [https://github.com/jennybc/bingo](https://github.com/jennybc/bingo) and *your* version of the code, at `https://github.com/[whatever your GitHub username is]/bingo`. For example, mine is at [https://github.com/AmeliaMN/bingo](https://github.com/AmeliaMN/bingo)
+You can also go on GitHub to view Jenny Bryan's version of the code, at [https://github.com/jennybc/bingo](https://github.com/jennybc/bingo) and *your* version of the code, at `https://github.com/[whatever your GitHub username is]/bingo`. For example, mine is at [https://github.com/AmeliaMN/bingo](https://github.com/AmeliaMN/bingo).
+
+Right now, all these places look pretty much the same, but we're going to start contributing to the package. 
+
+---
+
+## Build tab
+
+Notice that the RStudio project for `bingo` has a new tab, called Build. This is because our project is for a package. 
+
+<img src="img/build-tab.png" width='80%' class='centered'>
+
+---
+
+## Install and Restart
+
+Let's begin by installing the package locally and restarting our R. Click the "Install and Restart" button and watch what happens in the pane and in the Console. 
+
+
+```{r, echo=FALSE, eval=TRUE}
+library(bingo)
+```
+
+---
+
+## Play with the package
+
+This package doesn't do too terribly much, but you can try out some of the functions in the package, like
+
+```{r, eval=TRUE}
+get_topics()
+```
+
+and then pick a topic to see the cards of, like
+
+```{r, eval=TRUE}
+get_topic("bad-data")
+```
+
+---
+
+## Pull request
+
+Our eventual goal is to create a "pull request," to request that the GitHub repo owner (Jenny Bryan) incorporates some changes we have made. 
+
+<img src="img/fork-triangle-happy.png" width='73%' class='centered'>
+
+via [Jenny Bryan and Happy git with R](https://happygitwithr.com/)
+
+---
+
+## Getting ready
+
+Before we start making changes, we should prepare for eventually making a pull request (often abbreviated PR when people are writing about them). We'll use the `pr_init()` function to do this. 
+
+---
+
+## Making a change
+
+I'm not going to talk about all the pieces of a package-- we'll get to that later today! So for now, just navigate into `bingo/inst/topics` (a folder within a folder in your Files pane) and click on one of the `.R` files there. It's 
