recovering from failure

--- a/01-git-github-cornucopia/git-github-cornucopia.Rmd
+++ b/01-git-github-cornucopia/git-github-cornucopia.Rmd
@@ -301,6 +301,81 @@ If your pull request isn't quite ready, it might be the case that you need to go
 
 ---
 
+## 
+
+Recovering from Git(Hub) failure Scenario: You try to push and cannot
+What's the problem?
+There are changes on GitHub that you don't have.
+Pull. If the gods smile upon you, merge works. Now push.
+
+via [Jenny Bryan](https://github.com/jennybc/wtf-2019-rsc)
+
+---
+
+## 
+
+Let's create this situation.
+Make sure local Git pane is clear.
+Make sure local and remote are synced (push, pull).
+Edit & commit to file A locally. Edit & commit to file B remotely.
+Try to push. You will fail.
+
+via [Jenny Bryan](https://github.com/jennybc/wtf-2019-rsc)
+
+--
+
+##
+
+```
+jenny@2015-mbp bunny-scarf $ git push & To github.com:jennybc/bunny-scarf.git
+ ! [rejected]        master -> master (fetch first)
+error: failed to push some refs to 'git@github.com:jennybc/bunny-scarf.git'
+hint: Updates were rejected because the remote contains work that you do
+hint: not have locally. This is usually caused by another repository pushing
+hint: to the same ref. You may want to first integrate the remote changes
+hint: (e.g., 'git pull ...') before pushing again.
+hint: See the 'Note about fast-forwards' in 'git push --help' for details.
+```
+Remedy? Do what it says!
+pull, then push ... pull, then push ... pull, then push
+
+via [Jenny Bryan](https://github.com/jennybc/wtf-2019-rsc)
+
+---
+
+##
+
+Look at your Git history.
+You will see a merge commit, where the local and remote changes were reconciled.
+This is best case scenario and is likely with good Git habits (lots of small frequent commits and merges, no binary files in repo).
+
+via [Jenny Bryan](https://github.com/jennybc/wtf-2019-rsc)
+
+--
+
+## Recovering from git(hub) failure
+
+Recovering from Git(Hub) failure Scenario: You pull and get a merge conflict.
+What's the problem?
+GitHub can't figure out how to reconcile di s.
+Resolve the conflicts.
+Or abort ... and come back later.
+
+via [Jenny Bryan](https://github.com/jennybc/wtf-2019-rsc)
+
+---
+
+## 
+
+Let's create this situation.
+Make sure local Git pane is clear.
+Make sure local and remote are synced (push, pull).
+Edit & commit to file A locally.
+Make conflicting edit & commit to file A remotely.
+Try to push. You will fail. Try to pull. You will fail. All is fail.
+
+---
+
 ## .gitignore
 
 ---
