--- a/01-git-github-cornucopia/git-github-cornucopia.Rmd
+++ b/01-git-github-cornucopia/git-github-cornucopia.Rmd
@@ -348,6 +348,10 @@ For example, [fct_lump() does not respect asking for most common n - 1 values #1
 
 <img src="img/forcats-issue.png" width='80%' class='centered'>
 
+---
+
+## Filing effective issues
+
 To [file an issue](https://www.tidyverse.org/contribute/#issues), you usually need to start with a [reprex](https://www.tidyverse.org/help/#reprex).
 
 ---
