--- a/04-html-css-js/Amelias-notes.Rmd
+++ b/04-html-css-js/Amelias-notes.Rmd
@@ -48,3 +48,13 @@ Another way to style things is with classes. If you have something set for a tag
 But, you can also override styles with other styles. For example, the id rule will override the rule on p. 
 css has a heirarchical structure. You can define rules based on the order of elements on the page. `div > p` means a paragraph that is a direct child of div. With a space, it can be any descendent in the tree. `div p` could mean a paragraph that is a child, grandchild, etc. of the div
 
+
+## Another piece of magic-- live-changing css on a web page
+
+Yihui inspected an element in his browser (image of Amanda), and edited the css in the Styles panel. 
+
+![](img/circle.png)
+
+You can also filter images, invert them, blur them.... do you even need Photoshop??
+
+![](img/invert.png)
